# RLottieAndroid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle
src/androidTest/java/com/eternal_search/rlottie/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/java/com/eternal_search/rlottie/: RLottieDrawable.kt  RLottieMethods.java  RLottieView.kt
src/main/jni/: main.cpp
src/main/res/values/: attrs.xml  strings.xml
src/test/java/com/eternal_search/rlottie/: ExampleUnitTest.java
